[gd_scene load_steps=5 format=3 uid="uid://b3ch27e2b5l68"]

[ext_resource type="Script" path="res://obstacles/button/button.gd" id="1_xq0xl"]
[ext_resource type="PackedScene" uid="uid://bba8tif8siek0" path="res://obstacles/button/GameReadyPressurePlate.glb" id="2_ko61u"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_4wvb8"]
data = PackedVector3Array(-1.4904, 0.3269, 0, 1.7124, 0.3377, -1.7124, 1.4903, 0.3269, 0, -1.4904, 0.3269, 0, -1.7124, 0.3377, -1.7124, 1.7124, 0.3377, -1.7124, -1.4904, -0.3269, 0, 1.7124, -0.3377, -1.7124, -1.7124, -0.3377, -1.7124, -1.4904, -0.3269, 0, 1.4903, -0.3269, 0, 1.7124, -0.3377, -1.7124, 1.4903, 0.3269, 0, 1.7124, -0.3377, -1.7124, 1.4903, -0.3269, 0, 1.4903, 0.3269, 0, 1.7124, 0.3377, -1.7124, 1.7124, -0.3377, -1.7124, -1.4904, 0.3269, 0, -1.7124, -0.3377, 1.7123, -1.4904, -0.3269, 0, -1.4904, 0.3269, 0, -1.7124, 0.3377, 1.7123, -1.7124, -0.3377, 1.7123, 1.7124, 0.3377, -1.7124, -1.7124, -0.3377, -1.7124, 1.7124, -0.3377, -1.7124, 1.7124, 0.3377, -1.7124, -1.7124, 0.3377, -1.7124, -1.7124, -0.3377, -1.7124, -1.7124, 0.3377, 1.7123, 1.7124, -0.3377, 1.7123, -1.7124, -0.3377, 1.7123, -1.7124, 0.3377, 1.7123, 1.7124, 0.3377, 1.7123, 1.7124, -0.3377, 1.7123, -1.7124, 0.3377, -1.7124, -1.4904, -0.3269, 0, -1.7124, -0.3377, -1.7124, -1.7124, 0.3377, -1.7124, -1.4904, 0.3269, 0, -1.4904, -0.3269, 0, 1.7124, 0.3377, 1.7123, 1.4903, -0.3269, 0, 1.7124, -0.3377, 1.7123, 1.7124, 0.3377, 1.7123, 1.4903, 0.3269, 0, 1.4903, -0.3269, 0, -1.7124, -0.3377, 1.7123, 1.4903, -0.3269, 0, -1.4904, -0.3269, 0, -1.7124, -0.3377, 1.7123, 1.7124, -0.3377, 1.7123, 1.4903, -0.3269, 0, -1.7124, 0.3377, 1.7123, 1.4903, 0.3269, 0, 1.7124, 0.3377, 1.7123, -1.7124, 0.3377, 1.7123, -1.4904, 0.3269, 0, 1.4903, 0.3269, 0)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_bqbt6"]
data = PackedVector3Array(1.0923, -0.1469, 1.3743, -1.0924, 0.1469, 1.3743, 1.0923, 0.1469, 1.3743, 1.0923, -0.1469, 1.3743, -1.0924, -0.1469, 1.3743, -1.0924, 0.1469, 1.3743, 1.3743, -0.1469, -1.0924, 1.3743, 0.1469, 1.0923, 1.3743, 0.1469, -1.0924, 1.3743, -0.1469, -1.0924, 1.3743, -0.1469, 1.0923, 1.3743, 0.1469, 1.0923, 0.988, 0.1469, 0.9323, 0.988, 0.0728, -0.9324, 0.988, 0.1469, -0.9324, 0.988, 0.1469, 0.9323, 0.988, 0.0728, 0.9323, 0.988, 0.0728, -0.9324, -1.3743, -0.1469, 1.0923, -1.3743, 0.1469, -1.0924, -1.3743, 0.1469, 1.0923, -1.3743, -0.1469, 1.0923, -1.3743, -0.1469, -1.0924, -1.3743, 0.1469, -1.0924, -1.0924, -0.1469, -1.3743, 1.0923, 0.1469, -1.3743, -1.0924, 0.1469, -1.3743, -1.0924, -0.1469, -1.3743, 1.0923, -0.1469, -1.3743, 1.0923, 0.1469, -1.3743, -1.0924, -0.1469, 1.3743, -1.3743, 0.1469, 1.0923, -1.0924, 0.1469, 1.3743, -1.0924, -0.1469, 1.3743, -1.3743, -0.1469, 1.0923, -1.3743, 0.1469, 1.0923, -1.0924, 0.1469, -1.3743, -1.3743, -0.1469, -1.0924, -1.0924, -0.1469, -1.3743, -1.0924, 0.1469, -1.3743, -1.3743, 0.1469, -1.0924, -1.3743, -0.1469, -1.0924, 1.3743, 0.1469, -1.0924, 1.0923, -0.1469, -1.3743, 1.3743, -0.1469, -1.0924, 1.3743, 0.1469, -1.0924, 1.0923, 0.1469, -1.3743, 1.0923, -0.1469, -1.3743, 1.0923, 0.1469, 1.3743, 1.3743, -0.1469, 1.0923, 1.0923, -0.1469, 1.3743, 1.0923, 0.1469, 1.3743, 1.3743, 0.1469, 1.0923, 1.3743, -0.1469, 1.0923, -1.3743, -0.1469, 1.0923, -1.0924, -0.1469, -1.3743, -1.3743, -0.1469, -1.0924, -1.0924, -0.1469, -1.3743, 1.3743, -0.1469, -1.0924, 1.0923, -0.1469, -1.3743, 1.3743, -0.1469, -1.0924, 1.0923, -0.1469, 1.3743, 1.3743, -0.1469, 1.0923, 1.0923, -0.1469, 1.3743, -1.3743, -0.1469, 1.0923, -1.0924, -0.1469, 1.3743, -1.3743, -0.1469, 1.0923, 1.3743, -0.1469, -1.0924, -1.0924, -0.1469, -1.3743, 1.3743, -0.1469, -1.0924, -1.3743, -0.1469, 1.0923, 1.0923, -0.1469, 1.3743, -0.9324, 0.1469, 0.988, -1.3743, 0.1469, 1.0923, -0.9881, 0.1469, 0.9323, -0.9324, 0.1469, 0.988, -1.0924, 0.1469, 1.3743, -1.3743, 0.1469, 1.0923, -0.9881, 0.1469, -0.9324, -1.0924, 0.1469, -1.3743, -0.9324, 0.1469, -0.9881, -0.9881, 0.1469, -0.9324, -1.3743, 0.1469, -1.0924, -1.0924, 0.1469, -1.3743, 0.9323, 0.1469, -0.9881, 1.3743, 0.1469, -1.0924, 0.988, 0.1469, -0.9324, 0.9323, 0.1469, -0.9881, 1.0923, 0.1469, -1.3743, 1.3743, 0.1469, -1.0924, 0.988, 0.1469, 0.9323, 1.0923, 0.1469, 1.3743, 0.9323, 0.1469, 0.988, 0.988, 0.1469, 0.9323, 1.3743, 0.1469, 1.0923, 1.0923, 0.1469, 1.3743, -0.9881, 0.1469, 0.9323, -1.3743, 0.1469, -1.0924, -0.9881, 0.1469, -0.9324, -0.9881, 0.1469, 0.9323, -1.3743, 0.1469, 1.0923, -1.3743, 0.1469, -1.0924, 0.9323, 0.1469, 0.988, -1.0924, 0.1469, 1.3743, -0.9324, 0.1469, 0.988, 0.9323, 0.1469, 0.988, 1.0923, 0.1469, 1.3743, -1.0924, 0.1469, 1.3743, 0.988, 0.1469, -0.9324, 1.3743, 0.1469, 1.0923, 0.988, 0.1469, 0.9323, 0.988, 0.1469, -0.9324, 1.3743, 0.1469, -1.0924, 1.3743, 0.1469, 1.0923, -0.9324, 0.1469, -0.9881, 1.0923, 0.1469, -1.3743, 0.9323, 0.1469, -0.9881, -0.9324, 0.1469, -0.9881, -1.0924, 0.1469, -1.3743, 1.0923, 0.1469, -1.3743, 0.988, 0.0728, 0.9323, 0.9323, 0.0728, -0.9881, 0.988, 0.0728, -0.9324, 0.9323, 0.0728, -0.9881, -0.9881, 0.0728, -0.9324, -0.9324, 0.0728, -0.9881, -0.9881, 0.0728, -0.9324, -0.9324, 0.0728, 0.988, -0.9881, 0.0728, 0.9323, -0.9324, 0.0728, 0.988, 0.988, 0.0728, 0.9323, 0.9323, 0.0728, 0.988, 0.988, 0.0728, 0.9323, -0.9881, 0.0728, -0.9324, 0.9323, 0.0728, -0.9881, -0.9881, 0.0728, -0.9324, 0.988, 0.0728, 0.9323, -0.9324, 0.0728, 0.988, -0.9881, 0.1469, -0.9324, -0.9881, 0.0728, 0.9323, -0.9881, 0.1469, 0.9323, -0.9881, 0.1469, -0.9324, -0.9881, 0.0728, -0.9324, -0.9881, 0.0728, 0.9323, 0.988, 0.1469, -0.9324, 0.9323, 0.0728, -0.9881, 0.9323, 0.1469, -0.9881, 0.988, 0.1469, -0.9324, 0.988, 0.0728, -0.9324, 0.9323, 0.0728, -0.9881, -0.9881, 0.1469, 0.9323, -0.9324, 0.0728, 0.988, -0.9324, 0.1469, 0.988, -0.9881, 0.1469, 0.9323, -0.9881, 0.0728, 0.9323, -0.9324, 0.0728, 0.988, 0.9323, 0.1469, -0.9881, -0.9324, 0.0728, -0.9881, -0.9324, 0.1469, -0.9881, 0.9323, 0.1469, -0.9881, 0.9323, 0.0728, -0.9881, -0.9324, 0.0728, -0.9881, -0.9324, 0.1469, 0.988, 0.9323, 0.0728, 0.988, 0.9323, 0.1469, 0.988, -0.9324, 0.1469, 0.988, -0.9324, 0.0728, 0.988, 0.9323, 0.0728, 0.988, 0.9323, 0.1469, 0.988, 0.988, 0.0728, 0.9323, 0.988, 0.1469, 0.9323, 0.9323, 0.1469, 0.988, 0.9323, 0.0728, 0.988, 0.988, 0.0728, 0.9323, -0.9324, 0.1469, -0.9881, -0.9881, 0.0728, -0.9324, -0.9881, 0.1469, -0.9324, -0.9324, 0.1469, -0.9881, -0.9324, 0.0728, -0.9881, -0.9881, 0.0728, -0.9324)

[node name="Button" type="Area3D"]
collision_mask = 2
script = ExtResource("1_xq0xl")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="GameReadyPressurePlate" parent="." instance=ExtResource("2_ko61u")]

[node name="StaticBody3D" type="StaticBody3D" parent="GameReadyPressurePlate"]
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="GameReadyPressurePlate/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000168756, -0.335211, 0)
shape = SubResource("ConcavePolygonShape3D_4wvb8")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.43283e-05, 0.143331, -0.00054857)
shape = SubResource("ConcavePolygonShape3D_bqbt6")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="toggle_button"]

[editable path="GameReadyPressurePlate"]
